@@ -1,6 +1,6 @@
 ##
 ## Tiny Aplication Collection Makefile
-## $Id: Makefile,v 1.20 2006/04/29 12:29:12 mina86 Exp $
+## $Id: Makefile,v 1.21 2006/04/29 23:54:44 mina86 Exp $
 ## Copyright (c) 2005 by Michal Nazareicz (mina86/AT/tlen.pl)
 ## Licensed under the Academic Free License version 2.1.
 ##
@@ -99,7 +99,8 @@ install: install-FvwmTransFocus install-add install-ai install-cdiff	\
          install-mp3rip install-mpd-state install-null					\
          install-pingrange.pl install-rot13 install-settitle			\
          install-splitlines.sh install-timer install-tpwd				\
-         install-traf.sh install-xcolor2rgb install-xgetclass
+         install-traf.sh install-virtman.sh install-xcolor2rgb			\
+         install-xgetclass
 
 
 uninstall: uninstall-FvwmTransFocus uninstall-add uninstall-ai			\
@@ -113,7 +114,8 @@ uninstall: uninstall-FvwmTransFocus uninstall-add uninstall-ai			\
            uninstall-mpd-state uninstall-null uninstall-pingrange.pl	\
            uninstall-rot13 uninstall-settitle uninstall-splitlines.sh	\
            uninstall-timer uninstall-tpwd uninstall-traf.sh				\
-           uninstall-xcolor2rgb uninstall-xgetclass
+           uninstall-virtman.sh uninstall-xcolor2rgb					\
+           uninstall-xgetclass
 
 
 ##
