@@ -1,3 +1,8 @@
+2006-04-30  Michal Nazarewicz  <mina86/AT/tlen.pl>
+
+	* virtman.sh: New file
+	* Makefile, README, slack-desc: + virtman.sh added
+
 2006-04-29  Michal Nazarewicz  <mina86/AT/tlen.pl>
 
 	* ivona.sh: + added -R switch
@@ -7,7 +12,7 @@
 	+ exec added
 
 	* ivona.sh: New file
-	* Makefile, RELEASE, slack-desc: + ivona.sh added
+	* Makefile, README, slack-desc: + ivona.sh added
 
 	* getlyrics.pl: + --mpd and --pipe options added
 
